[package]
name = "clier"
version = "0.5.0"
edition = "2021"
authors = ["Vincent Thomas"]
description = "A cli parser and framework for rust"
license = "MIT"
repository = "https://github.com/vincent-thomas/clier"
keywords = ["cli", "parser", "parse"]
documentation = "https://docs.rs/clier"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
macros = []

[[bench]]
name = "parser_bench"
harness = false

[dependencies]
console = "0.15.7"
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.106"
thiserror = "1.0.48"

[dev-dependencies]
criterion = "0.5.1"

