[package]
name = "clier"
version = "0.4.2"
edition = "2021"
authors = ["Vincent Thomas"]
description = "A cli parser and framework for rust"
license = "MIT"
repository = "https://github.com/vincent-thomas/clier"
keywords = ["cli", "parser", "parse"]
documentation = "https://docs.rs/clier"


[dependencies]
console = "0.15.7"
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.106"
thiserror = "1.0.48"

clier_parser = {path = "../clier_parser"}
error = {path = "../clier_error"}
clier_builder = { path = "../clier_builder" }

[dev-dependencies]
cargo-rdme = "1.4.2"
criterion = "0.5.1"

[[bench]]
name = "parser_bench"
harness = false

