[package]
name = "clier"
version = "0.6.2"
edition = "2021"
authors = ["Vincent Thomas"]
description = "A cli parser and framework for rust"
license = "MIT"
repository = "https://github.com/vincent-thomas/clier"
keywords = ["cli", "framework", "parser"]
documentation = "https://docs.rs/clier"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
macros = []

[[bench]]
name = "parser_bench"
harness = false

[dependencies]
console = "0.15.7"
thiserror = "1.0.48"
clier_parser = { version = "0.7.0", path = "../clier_parser" }


[dev-dependencies]
criterion = "0.5.1"

