[package]
name = "clier_cli"
version = "0.6.1"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clier = { version = "0.6.1", path = "../clier" }
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"
