[package]
name = "clier_cli"
version = "0.6.2"
edition = "2021"
license-file = "../LICENSE"
description = "Cli for generating code for the clier framework"
repository = "https://github.com/vincent-thomas/clier"
keywords = ["cli", "framework", "parser"]
documentation = "https://docs.rs/clier"

categories = ["command-line-interface"]

[[bin]]
name = "clier"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clier = { version = "0.6.2", path = "../clier" }
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"
