[package]
name = "clier_parser"
version = "0.6.2"
edition = "2021"
authors = ["Vincent Thomas"]
description = "The underlying parser for the cli framework clier"
license = "MIT"
repository = "https://github.com/vincent-thomas/clier"
keywords = ["cli", "framework", "parser"]
documentation = "https://docs.rs/clier"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html