[package]
name = "clier_parser"
version = "0.7.3"
edition = "2021"
authors = ["Vincent Thomas"]
description = "Parser for building values and commands from command line arguments"
repository = "https://github.com/vincent-thomas/clier"
keywords = ["cli", "parser"]
documentation = "https://docs.rs/clier_parser"
license-file = "../LICENSE"
categories = ["command-line-interface"]

[[bench]]
name = "parser_bench"
harness = false

[dev-dependencies]
criterion = "0.5.1"

[dependencies]
itertools = "0.11.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html